Copia de inicio

--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,7 @@
     <packaging>pom</packaging>
     <name>s2_g4_documentos</name>
  
-    <modules>
-        <module>documentos-back</module>
-        <module>documentos-web</module>
-    </modules>
+    <modules></modules>
     <repositories>
         <repository>
             <id>csw-releases</id>
