Se crearon las pruebas unitarias

--- a/documentos-back/pom.xml
+++ b/documentos-back/pom.xml
@@ -49,6 +49,7 @@
             <artifactId>podam</artifactId>
             <version>6.0.2.RELEASE</version>
             <type>jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
