--- a/documentos-web/pom.xml
+++ b/documentos-web/pom.xml
@@ -100,7 +100,9 @@
                 <version>0.16</version>
                 <executions>
                     <execution>
-                    
+                        <goals>
+                            <goal>analyze-jaxrs</goal>
+                        </goals>
                         <configuration>
                             <backend>swagger</backend>
                             <deployedDomain>localhost:8080</deployedDomain>
