Index, se agregaron el detailLibros y la font Roboto

--- a/documentos-back/pom.xml
+++ b/documentos-back/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>documentos-back</artifactId>
     <packaging>jar</packaging>
-    <name>documentos-back</name>
+    <name>main_back</name>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
