--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
  
     <modules>
         <module>documentos-back</module>
+         <module>documentos-web</module>
     </modules>
     <repositories>
         <repository>
